# stm32-freertos-blinker

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  flash.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
cmake/: STM32F103C8Tx_FLASH.ld  arm-gcc.cmake
docs/: getting_started.md
include/: board.h
src/: FreeRTOSConfig.h  board.c  main.c
tests/: # Code Citations.md  CMakeLists.txt  test_scheduler.c  unity_config.h
